--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ p {
     rgb(131, 58, 144) 100%
   );
   border: none;
+  transition: all 200ms ease-out;
 }
 .btn-2:hover {
   background: rgb(69, 3, 81);
@@ -85,6 +86,7 @@ p {
     rgb(144, 17, 172) 0%,
     rgb(207, 107, 232) 100%
   );
+  transition: all 200ms ease-out;
 }
 .btn-3 {
   background: rgba(167, 97, 123, 0.541);
@@ -98,6 +100,7 @@ p {
 .btn-3:hover {
   background: rgb(149, 5, 5);
   background: linear-gradient(0deg, rgb(196, 57, 75) 0%, rgb(103, 11, 28) 100%);
+  transition: all 200ms ease-out;
 }
 
 /* Add your custom styles for btn-1, btn-2, and btn-3 */
